Fix up-button z-index to stay always on top

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -10,6 +10,7 @@
 }
 
 #up-button {
+    z-index: 999999;
     padding: 0;
     margin: 0;
     display: block;
